src/objects/Contact_Merge_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Contact Merge Settings</label>
</CustomObject>